Modify Menu Form1

--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -118,38 +118,64 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnConducteurs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCarburant.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
-        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
-        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
-        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
-        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
-        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
-        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
-        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
-        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
-        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
-        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
-        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
-        gg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
+        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
+        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
+        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
+        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
+        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
+        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
+        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
+        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
+        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
+        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
+        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
+        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
+        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
+        fG8AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnVehicules.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCarteFree.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzIKxRg79wAAAh9JREFU
-        WEftlj1Lm1EYhoODkEmpSzvprggqSkVHO/gBdXMTQVBU7FKhkPYHiHSri6UUV+3WVbBdXIXWiIr2D1go
-        rZSqjfB63ec8J00k6puPRodccMH5vJ9D8r4nSdSoce+JoqgeB3EBX8RUa7Wn3mJKg4B23MVSSWO7xRUH
-        G7vxB/7Gl/gYu2KqtdqjvcrottjCsGAE9/APvsM+/GX22bKiuZLTj+9RNVRr2Ja5hesYOMNw8h5bUjLK
-        sCxlKjuwZkvcohbccsOe79hh02WjLMsMqFazTXsYeIp/NQsfcbHCKlOoxqiV9TAwZBPVQrWGQvFHeKLR
-        KqMH86EO8BqPsBc7cRn/x6ehzDeoGqr1DZd0gEOcdB+HQb8N97FSKKvV4h30J/FAjQw+t/EsjDXhMX7B
-        qRL9isp4YLFZGNN1nVFD/MR5HDB1Mb1Cvbtp21M07NU1Hm5SZYb8Z6hnIAoHuI0By4wNe574rTcT9wA6
-        7QoWer8L+RZjvVk6gJ4Bkb3zadfhBzfq2caNItWegLLqLF75+l0Q7hnY8e1ozOYd9JMYrueUDceGPfre
-        hTKSNuygP+ZmeEjVmfNt956uYu5TnMILPEe9w9OYO3+dWqs92quM3DnVCPfMrA6gj1uLq41q+q+Fxqkb
-        yucz5p68HJV1lVNXXND55MfyGLfpsiFrwkfmsWnTbkEjzmD4U/nv30qFIFMXUchXrQabqlHjLkkkLgHy
-        tzMfOEjH8gAAAABJRU5ErkJggg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
+        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
+        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
+        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
+        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
+        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
+        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
+        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
+        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
+        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
+        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
+        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
+        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
+        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
+        fG8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnVSNTL.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
+        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
+        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
+        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
+        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
+        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
+        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
+        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
+        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
+        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
+        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
+        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
+        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
+        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
+        fG8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnTransport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -185,26 +211,6 @@
         F9RupcsvnKwSdIBX4hg9pYtQRcVv8M0WEUUDNlwAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnCarburant.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
-        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
-        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
-        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
-        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
-        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
-        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
-        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
-        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
-        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
-        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
-        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
-        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
-        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
-        fG8AAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="btnVignettes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -218,6 +224,40 @@
         L6IvkZoh+hqyudZFhM8SHuThvmNePoC8iL5Eagb3rTGRJZX4LOFeXrFjXj6AvIi+RGqG6GvI5loXET5L
         +H8HpnMHammdzeZaFxE+S5jOHajFZ1tjAt/8YuILEb50B/T+pleo6kMwo8PPWdoJ9aPsF5FeTo9R7W+7
         Vl7RL9v+X9LrvQMv0/WNqXwkiQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnConducteurs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
+        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
+        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
+        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
+        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
+        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
+        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
+        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
+        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
+        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
+        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
+        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="btnVehicules.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzIKxRg79wAAAh9JREFU
+        WEftlj1Lm1EYhoODkEmpSzvprggqSkVHO/gBdXMTQVBU7FKhkPYHiHSri6UUV+3WVbBdXIXWiIr2D1go
+        rZSqjfB63ec8J00k6puPRodccMH5vJ9D8r4nSdSoce+JoqgeB3EBX8RUa7Wn3mJKg4B23MVSSWO7xRUH
+        G7vxB/7Gl/gYu2KqtdqjvcrottjCsGAE9/APvsM+/GX22bKiuZLTj+9RNVRr2Ja5hesYOMNw8h5bUjLK
+        sCxlKjuwZkvcohbccsOe79hh02WjLMsMqFazTXsYeIp/NQsfcbHCKlOoxqiV9TAwZBPVQrWGQvFHeKLR
+        KqMH86EO8BqPsBc7cRn/x6ehzDeoGqr1DZd0gEOcdB+HQb8N97FSKKvV4h30J/FAjQw+t/EsjDXhMX7B
+        qRL9isp4YLFZGNN1nVFD/MR5HDB1Mb1Cvbtp21M07NU1Hm5SZYb8Z6hnIAoHuI0By4wNe574rTcT9wA6
+        7QoWer8L+RZjvVk6gJ4Bkb3zadfhBzfq2caNItWegLLqLF75+l0Q7hnY8e1ozOYd9JMYrueUDceGPfre
+        hTKSNuygP+ZmeEjVmfNt956uYu5TnMILPEe9w9OYO3+dWqs92quM3DnVCPfMrA6gj1uLq41q+q+Fxqkb
+        yucz5p68HJV1lVNXXND55MfyGLfpsiFrwkfmsWnTbkEjzmD4U/nv30qFIFMXUchXrQabqlHjLkkkLgHy
+        tzMfOEjH8gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
