Modify the design of form1

--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -118,6 +118,24 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="VignettesUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Vignettesdown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnConducteurs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -152,67 +170,43 @@
         tzMfOEjH8gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="repdown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="repup.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="carbUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="carbdown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnCarburant.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
-        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
-        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
-        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
-        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
-        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
-        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
-        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
-        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
-        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
-        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
-        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
-        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
-        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
-        fG8AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
-        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
-        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
-        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
-        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
-        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
-        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
-        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
-        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
-        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
-        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
-        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
-        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
-        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
-        fG8AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnCarteFree.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
-        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
-        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
-        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
-        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
-        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
-        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
-        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
-        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
-        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
-        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
-        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
-        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
-        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
-        fG8AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnVSNTL.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
