Modify Form1 Menu

--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -136,6 +136,48 @@
         9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="prdUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="PRDdown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnPRD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnParcPRD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzIKxRg79wAAAh9JREFU
+        WEftlj1Lm1EYhoODkEmpSzvprggqSkVHO/gBdXMTQVBU7FKhkPYHiHSri6UUV+3WVbBdXIXWiIr2D1go
+        rZSqjfB63ec8J00k6puPRodccMH5vJ9D8r4nSdSoce+JoqgeB3EBX8RUa7Wn3mJKg4B23MVSSWO7xRUH
+        G7vxB/7Gl/gYu2KqtdqjvcrottjCsGAE9/APvsM+/GX22bKiuZLTj+9RNVRr2Ja5hesYOMNw8h5bUjLK
+        sCxlKjuwZkvcohbccsOe79hh02WjLMsMqFazTXsYeIp/NQsfcbHCKlOoxqiV9TAwZBPVQrWGQvFHeKLR
+        KqMH86EO8BqPsBc7cRn/x6ehzDeoGqr1DZd0gEOcdB+HQb8N97FSKKvV4h30J/FAjQw+t/EsjDXhMX7B
+        qRL9isp4YLFZGNN1nVFD/MR5HDB1Mb1Cvbtp21M07NU1Hm5SZYb8Z6hnIAoHuI0By4wNe574rTcT9wA6
+        7QoWer8L+RZjvVk6gJ4Bkb3zadfhBzfq2caNItWegLLqLF75+l0Q7hnY8e1ozOYd9JMYrueUDceGPfre
+        hTKSNuygP+ZmeEjVmfNt956uYu5TnMILPEe9w9OYO3+dWqs92quM3DnVCPfMrA6gj1uLq41q+q+Fxqkb
+        yucz5p68HJV1lVNXXND55MfyGLfpsiFrwkfmsWnTbkEjzmD4U/nv30qFIFMXUchXrQabqlHjLkkkLgHy
+        tzMfOEjH8gAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnConducteurs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -152,6 +194,48 @@
         F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
         ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
         gg==
+</value>
+  </data>
+  <data name="vehiculedown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="vehiculeup.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnMRouge.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnLocation.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnTout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnVehicules.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -186,6 +270,30 @@
         OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
         2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
         8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnPRDCarb.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnCarteFree.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnSNTLCarb.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="carbUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -224,6 +332,22 @@
         zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
         oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
         fG8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnRepSiegeSNTL.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnRepPRD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCycc+2BfegAAAGhJREFU
+        OE9jQAb////3BeJPQNwAFSINADXmATEMtEKFiQdATUxAvACsHQK6oVLEA6CmUUPQAFATMxAvAmuHgASo
+        FHEAqIF8A4CKQZoXgrVBQBdUijAAKh5xmkEAqIHizOQDxCRkZwYGAG8gDEpri7FXAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnTransport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
