Suprimmer Tout carburants

--- a/ParcAuto/Forms/Carburants.resx
+++ b/ParcAuto/Forms/Carburants.resx
@@ -494,7 +494,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB6
-        GQAAAk1TRnQBSQFMAwEBAAEYAQABGAEAAVoBAAFaAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        GQAAAk1TRnQBSQFMAwEBAAEgAQABIAEAAVoBAAFaAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AWgBAQIAAVoDAAEBAQABCAUAAZABfhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -603,6 +603,22 @@
         Af8BwCQAAv8BgAYAAT8B/wHAJAAC/wHgBgAC/wHAJAAC/wHwBQABAQL/AcAkAAL/AfwFAAEHAv8BwCQA
         Av8B/gUAAQ8C/wHAJAAD/wGABAABPwL/AcAkAAP/AeAEAAP/AcAkAAP/Af4DAAEPA/8BwCQABP8BwAIA
         AX8D/wHAJAAE/wH+AQABDwT/AcAkAAv/AcAkAAv/AcAkAAv/AcAkAAv/AcAkAAs=
+</value>
+  </data>
+  <data name="btnSuprimmerTout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDwMI7UtdaQAAAkBJREFU
+        WEftlz9IVWEYxm/a4CBxaZEIIoJCGwQDVyEIxyBCLi2BdxBbgmpJCDE3h/6sCaFLQyXp0BCUQzRmgVMU
+        NERUiKS2iEH0+jz3fU5ezuV23vuhmz94hu93vuc9n97rvcfSPq1iZpeQWeRJLnQVbdsbcINbSBE3tX33
+        wfAffg+bQEZyoSPftH330Q1MywZ0uen1QtC9gfD1nEc+I19zydhskox8j7M4k7Ov63aN4OJPZK9Z1e0a
+        wcUeZAi5zZ1gBblbF77Tn+fyAnlZl8fIg7p8R8gkwtndul1zsKmPDfBJKhnMeO+j7IxUMdh83Du2IpUM
+        ZvD1JyekisHmsndsS6oG1qeRHi0L1wTr7H11WKoYbG5D/tRqZh3S9BvIupaR9QGEc/4i7dIxUFhDSJcU
+        XQ0tI+tDbuyXVByUstfulFTKAY65sS9ScVBa8q71S6UcoNeNLUvFQYl/0+ScVMoBBtzYa6k4KD31rl2U
+        SjnAeTe2IBUHpWnvWlUq5QCX3disVByUprxr16RSDnDVjd2XioPSmHdtQirlAONudmaEQWnUu3ZPKuUA
+        d9zs/BbDoFTxrs1IpRzgoRsbloqD0qB37ZkUHT8d17SMrOcQckEqDkr93rVFKTo+L/z7Pg+sXyHkrFQc
+        lE56195JtQy7PsL6pOKg1IFsKUekw6BzFPmN8NuwLN0aKPKRinxA+FfBR6pIriAfEfJI41oH5U7kTW1M
+        Gm+RtJ8+AwP4cMKP1Bmk/l+x/4UPr1XkoMbs04RSaRuF5Tgs7YsNjAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
